# battery-powered-mobile-robot-audix

./: .gitattributes  README.md
archives/: audix-mk1.rar
electrical/pcbs-full-files/: design-2.eprj
electrical/wiring-schematic/: fritzing-version-1-stepper-ir.fz
source-repositories/Audix/: README.md
source-repositories/Audix/src/audix_pkg/: CMakeLists.txt  package.xml
source-repositories/Audix/src/audix_pkg/config/: controllers.yaml  ekf.yaml  joint_names_audix.yaml
source-repositories/Audix/src/audix_pkg/launch/: display.launch.py  display_rviz.launch.py  gazebo.launch.py  robot_gazebo.launch.py
source-repositories/Audix/src/audix_pkg/meshes/: back_left_wheel_link.STL  back_right_wheel_link.STL  base_link.STL  bottom_stud_link.STL  camera_link.STL  front_left_wheel_link.STL  front_right_wheel_link.STL  left_link1.STL  left_link3.STL  left_link4.STL  left_link5.STL  left_link6.STL  right_link1.STL  right_link2.STL  right_link3.STL  right_link4.STL  right_link5.STL  scissors_lift_base.STL  top_stud_link.STL
source-repositories/Audix/src/audix_pkg/rviz/: config.rviz
source-repositories/Audix/src/audix_pkg/scripts/: obstacle_avoidance.py  waypoints_control.py  waypoints_final.py
source-repositories/Audix/src/audix_pkg/urdf/: audix.csv  audix.urdf
source-repositories/Audix/src/audix_pkg/world/: empty_world.sdf  my_world.sdf
source-repositories/aduix-esp32-windows-test/: .gitignore  README.md  audix_esp32_windows_test.code-workspace  platformio.ini
source-repositories/aduix-esp32-windows-test/docs/: architecture.md  esp32_standalone_test_runbook_with_imu.md
source-repositories/aduix-esp32-windows-test/include/: bench_runtime.hpp  command_interface.hpp  config.hpp  console_sink.hpp  imu_driver.hpp  mecanum.hpp  motor_driver.hpp  safety.hpp  shared_state.hpp  stepper_bench.hpp
source-repositories/aduix-esp32-windows-test/lib/: README.md
source-repositories/aduix-esp32-windows-test/src/: bench_runtime.cpp  command_rx_task.cpp  console_sink.cpp  imu_driver.cpp  main.cpp  mecanum.cpp  motion_control_task.cpp  motor_driver.cpp  safety.cpp  sensor_update_task.cpp  shared_state.cpp  stepper_bench.cpp  wifi_console.cpp
source-repositories/aduix-esp32-windows-test/test/: README.md
source-repositories/aduix-esp32-windows-test/visualizer/: README.md  app.js  index.html  styles.css
source-repositories/esp32-mecanum-yaw-hold/: .gitignore  README.md  audix_wifi_spiffs.csv  platformio.ini
source-repositories/esp32-mecanum-yaw-hold/docs/: architecture.md  esp32_standalone_test_runbook_with_imu.md  rtos_porting_notes.md  tuning_guide.md  yaw_hold_test_procedure.md
source-repositories/esp32-mecanum-yaw-hold/include/: bench_runtime.hpp  config.hpp  encoder_isr.hpp  imu_driver.hpp  odometry.hpp  pid.hpp  (+2 more)
source-repositories/ros2_ws/: README.md  robot_start.sh
source-repositories/ros2_ws/src/audix_interfaces/: CMakeLists.txt  package.xml
source-repositories/ros2_ws/src/audix_interfaces/msg/: EspTelemetry.msg  IrState.msg
source-repositories/ros2_ws/src/audix_interfaces/srv/: AuditMission.srv  DirectionCommand.srv  LiftMoveSteps.srv  Move.srv  RawCommand.srv  RotateCommand.srv  SetRobotMode.srv  ShelfScan.srv  TwistCommand.srv
source-repositories/ros2_ws/src/warehouse_vision/: package.xml  setup.cfg  setup.py
source-repositories/ros2_ws/src/warehouse_vision/warehouse_vision/: hello_node.py  vision_audit_node.py  webcam_node.py
(+36 files in other folders)
